# knowledge

./: docker.txt  github.txt  vscode.txt
c++/: CMake.txt  c++ CMake.txt  c++ Google Test.txt  googletest.txt
c++/project template/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.txt
linux/: ldd.txt  man.txt  repo.txt  rpm.txt  text.txt
